add/fix tests for measurement endpoints
